@@ -260,7 +260,6 @@ CAPTION "Filters"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "",IDC_LIST_FILTERS,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_SORTASCENDING | LVS_OWNERDRAWFIXED | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_TABSTOP,6,48,300,192
-    CONTROL         "",IDC_LIST_DETAILS,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_TABSTOP,312,48,192,126
     CONTROL         "Favorite filter",IDC_CHECK_FAVORITE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,312,186,59,10
     PUSHBUTTON      "Property page",IDC_BUTTON_PROPERTYPAGE,312,222,67,14
     PUSHBUTTON      "Unregister",IDC_BUTTON_UNREGISTER,438,222,66,14,WS_DISABLED
