@@ -2,6 +2,7 @@
 + more drawing fixes
 + added some more extensions into opendialog filters
 + added registered pin details and media types
++ property-tree integrated with the filters form
 
 [0.2.0.0 - Beta    04/Mar/2008]
 + added filter details form
